Implement new quiz module

--- a/app/templates/components/module-wrap.hbs
+++ b/app/templates/components/module-wrap.hbs
@@ -14,7 +14,7 @@
         {{code-module module=module id=module.id submit_done="submit_done" actionReceiver=module_logic}}
       {{/if}}
       {{#if module.is_quiz}}
-        {{quiz-module module=module id=module.id result="result" error="error"}}
+        {{quiz-module module=module submit_done="submit_done" actionReceiver=module_logic}}
       {{/if}}
       {{#if module.is_general}}
         {{file-module module=module id=module.id result="result" error="error"}}
