--- a/app/templates/components/quiz-module.hbs
+++ b/app/templates/components/quiz-module.hbs
@@ -2,9 +2,6 @@
 	<div style="margin-bottom: 20px">
 		{{{module.description}}}
 	</div>
-	{{#if general_error}}
-		{{warning-general text=general_error}}
-	{{/if}}
 </div>
 
 <div class="controls" style="margin-left:0px">
@@ -14,10 +11,10 @@
 						<div class="panel panel-ksi">
 						  <div class="panel-heading panel-heading-ksi">{{{question.question}}}</div>
 						  <div class="panel-body">
-								{{warning-general text="Položku je nutno vyplnit" id=(construct-id "w" id index) class="hide"}}
+								{{warning-general text="Položku je nutno vyplnit" id=(construct-id "w" module.id index) class="hide"}}
 								{{#each question.options as |option number|}}
 									<div>
-										<label>{{input type=question.type name=(construct-id "group" id index) id=(construct-id "id_q" index number) class=(construct-id "group" id index)}} {{option}}</label>
+										<label>{{input type=question.type name=(construct-id "group" module.id index) id=(construct-id "id_q" index number) class=(construct-id "group" module.id index)}} {{option}}</label>
 									</div>
 								{{/each}}
 						  </div>
@@ -25,4 +22,7 @@
 			{{/each}}
 		</div>
 	</div>
+	{{#if general_error}}
+		{{warning-general text=general_error}}
+	{{/if}}
 </div>
