--- a/app/templates/components/file-module.hbs
+++ b/app/templates/components/file-module.hbs
@@ -1,9 +1,6 @@
 <div class=row style="margin-left:0px">
 	{{{module.description}}}
 </div>
-{{#if general_error}}
-	{{warning-general text=general_error}}
-{{/if}}
 <div class="alert alert-warning" role="alert" style="margin-left:0px; margin-top:20px">
 	<!-- TODO color poznamky -->
 	<strong>Poznámka:</strong> Odevzdat můžete i více různých souborů naráz, stačí je vybrat. <!-- TODO odkaz na clanek, ako odevzdavat ukoly -->
@@ -13,8 +10,8 @@
 	<div class="fileUpload btn btn-primary" {{action "select_files"}}>
 		<span class="glyphicon glyphicon-open" aria-hidden="true"></span>
     	<span>Vybrat soubory</span>
-		{{file-input multiple=true class="upload" endpoint=endpoint id=(construct-id "upload" module.id)}}
 	</div>
+	{{file-input multiple=true class="upload" endpoint=endpoint id=(construct-id "upload" module.id) file_list="file_list" status="status" upload_finished="upload_finished" upload_failed="upload_failed" actionReceiver=f_input}}
 	{{#if files}}
 		<br>
 		Vybrané soubory:
@@ -23,5 +20,8 @@
 				<li>{{file}}</li>
 			{{/each}}
 		</ul>
+	{{/if}}
+	{{#if general_error}}
+		{{warning-general text=general_error}}
 	{{/if}}
 </div>
