--- a/app/templates/task/submission.hbs
+++ b/app/templates/task/submission.hbs
@@ -34,5 +34,5 @@
     </tbody>
   </table>
 {{else}}
-  {{info-general text="Tuto úlohu jsi zatím neodevzdal."}}
+  {{info-general text="Tato úloha zatím nemá zveřejněné řešení"}}
 {{/if}}
