--- a/app/templates/settings/password.hbs
+++ b/app/templates/settings/password.hbs
@@ -5,11 +5,11 @@
 <div class="password-email-container">
 	{{#validatable-form action="change_password"}}
 		<label>Staré heslo:</label>
-		{{input value=old_password type="password" name="pass" placeholder="staré heslo" required=true title="Musíš vyplnit stávající heslo"}}
-		<label>Nové heslo:</label>
-		{{input value=new_password type="password" name="pass" placeholder="nové heslo" required=true title="Musíš vyplnit nové heslo (alespoň 6 znaků)" pattern=".{6,}"}}
+		{{input value=old_password type="password" name="pass" placeholder="staré heslo" required=true class="form-control"}}
+		<label>Nové heslo (alespoň 6 znaků):</label>
+		{{input value=new_password type="password" name="pass" placeholder="nové heslo" required=true pattern=".{6,}" class="form-control"}}
 		<label>Ověření hesla:</label>
-		{{input value=new_password2 type="password" name="pass" placeholder="nové heslo znovu" required=true title="Musíš vyplnit ověření nového hesla (alespoň 6 znaků)" pattern=".{6,}"}}
+		{{input value=new_password2 type="password" name="pass" placeholder="nové heslo znovu" required=true pattern=".{6,}" class="form-control"}}
 		{{#if submit_error}}
 			{{warning-general text=submit_error}}
 		{{/if}}
