--- a/app/templates/settings/personal.hbs
+++ b/app/templates/settings/personal.hbs
@@ -12,17 +12,17 @@
 
   <div class="form-group">
     <label for="name">Jméno:</label>
-    {{input value=model.first_name class="form-control" style="width:100%;" required=true title="Jméno je povinné"}}
+    {{input value=model.first_name class="form-control" style="width:100%;" required=true}}
   </div>
 
   <div class="form-group">
     <label for="surname">Přijmení:</label>
-    {{input value=model.last_name class="form-control" required=true title="Přijmení je povinné"}}
+    {{input value=model.last_name class="form-control" required=true}}
   </div>
 
   <div class="form-group">
     <label for="email">E-mail:</label>
-    {{input value=model.email class="form-control" required=true type="email" title="Je třeba zadat platný e-mail"}}
+    {{input value=model.email class="form-control" required=true type="email"}}
   </div>
 
   <div class="form-group">
@@ -40,22 +40,22 @@
   <div class="form-group">
 
     <label for="street">Ulice:</label>
-    {{input value=model.addr_street class="form-control" required=true title="Adresa je povinná"}}
+    {{input value=model.addr_street class="form-control" required=true}}
   </div>
 
   <div class="form-group">
     <label for="city">Město:</label>
-    {{input value=model.addr_city class="form-control" required=true title="Adresa je povinná"}}
+    {{input value=model.addr_city class="form-control" required=true}}
   </div>
 
   <div class="form-group">
     <label for="psc">PSČ:</label>
-    {{input value=model.addr_zip class="form-control" required=true title="Adresa je povinná"}}
+    {{input value=model.addr_zip class="form-control" required=true}}
   </div>
 
   <div class="form-group">
     <label for="country">Země:</label>
-    {{#x-select value=model.addr_country class="form-control"}}
+    {{#x-select value=model.addr_country class="form-control" required=true}}
       {{#each countries key="@index" as |item|}}
         {{log "Země!"}}
         {{#x-option value=item.short selected=(is-equal item.short model.addr_country)}}
@@ -74,27 +74,27 @@
 
   <div class="form-group">
     <label for="street">Název:</label>
-    {{input value=model.school_name class="form-control" required=true title="Adresa školy je povinná"}}
+    {{input value=model.school_name class="form-control" required=true}}
   </div>
 
   <div class="form-group">
     <label for="street">Ulice:</label>
-    {{input value=model.school_street class="form-control" required=true title="Adresa školy je povinná"}}
+    {{input value=model.school_street class="form-control" required=true}}
   </div>
 
   <div class="form-group">
     <label for="city">Město:</label>
-    {{input value=model.school_city class="form-control" required=true title="Adresa školy je povinná"}}
+    {{input value=model.school_city class="form-control" required=true}}
   </div>
 
   <div class="form-group">
     <label for="psc">PSČ:</label>
-    {{input value=model.school_zip class="form-control" required=true title="Adresa školy je povinná"}}
+    {{input value=model.school_zip class="form-control" required=true}}
   </div>
 
   <div class="form-group">
     <label for="country">Země:</label>
-    {{#x-select value=model.school_country class="form-control"}}
+    {{#x-select value=model.school_country class="form-control" required=true}}
       {{#each countries key="@index" as |item|}}
         {{#x-option value=item.short selected=(is-equal item.short model.school_country)}}
           {{item.name}}
@@ -111,7 +111,7 @@
 
   <div class="form-group">
     <label for="year-maturita">Rok maturity:</label>
-    {{#x-select value=model.school_finish class="form-control"}}
+    {{#x-select value=model.school_finish class="form-control" required=true}}
       {{#each maturita_year key="@index" as |item|}}
         {{#x-option value=item selected=(is-equal item model.school_finish)}}
           {{item}}
@@ -132,13 +132,13 @@
 
   <div class="form-group">
     <label for="tshirt">Velikost trička:</label>
-    <select class="form-control">
+    {{#x-select value=model.tshirt_size class="form-control" required=true}}
       {{#each tshirt_size key="@index" as |item|}}
-        <option value="{{item}}" selected={{is-equal item model.tshirt_size}}>
+        {{#x-option value=item selected=(is-equal item model.tshirt_size)}}
           {{item}}
-        </option>
+        {{/x-option}}
       {{/each}}
-    </select>
+    {{/x-select}}
   </div>
   <button type="submit" class="btn btn-primary" style="margin-top:20px; width:100%;">
     Ulož změny
