--- a/app/templates/forgot-password.hbs
+++ b/app/templates/forgot-password.hbs
@@ -9,7 +9,7 @@
   {{else}}
 	  <div class="password-email-container">
 	  	{{#validatable-form action="send" model=model}}
-		    {{input value=model.email type="email" class="form-control" id="email" required=true title="Je třeba vyplnit e-mail" placeholder="e-mail"}}
+		    {{input value=model.email type="email" class="form-control" id="email" required=true placeholder="e-mail"}}
 		    <input type="submit" name="login"  class="btn btn-primary" value="Odeslat">
 		    {{#if general_error}}
 		    	{{warning-general text=general_error}}
