--- a/app/templates/task/solution.hbs
+++ b/app/templates/task/solution.hbs
@@ -1,6 +1,6 @@
 <div style="margin:20px">
-	{{#if model.solution}}
-  		{{{model.solution}}}
+	{{#if model.details.solution}}
+  		{{{model.details.solution}}}
   	{{else}}
   		Úlohu je ještě možné řešit nebo nebyla ještě opravena.
   	{{/if}}
