--- a/app/templates/task/evaluation.hbs
+++ b/app/templates/task/evaluation.hbs
@@ -1,4 +1,4 @@
-{{#if model.my_score}}
+{{#if submitted}}
 <div style="margin:20px">
   <div style="margin-top:30px">
     <h5>Skóre:</h5>
@@ -7,11 +7,11 @@
 
 	<div class="progress" style="margin-top:20px">
 		<div class="progress-bar progress-bar-warning progress-bar-ksi" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="10" style="width: {{progress_width}}%">
-			<b>{{model.my_score.score}}&nbsp;/{{model.max_score}}</b>
+			<b>{{sum}}&nbsp;/{{model.max_score}}</b>
 		</div>
 	</div>
 
-  {{#if model.my_score.achievements}}
+  {{#if model.achievements}}
     <div style="margin-top:30px">
       <h5>Trofeje</h5>
       <hr>
@@ -19,49 +19,45 @@
 
     <div class="panel panel-achievements">
       <div class="panel-body">
-        {{#each model.my_score.achievements as |achievement|}}
+        {{#each model.details.achievements as |achievement|}}
               {{achievement-small model=achievement}}
             {{/each}}
       </div>
     </div>
   {{/if}}
 
-  {{#if model.my_score}}
-    <div style="margin-top:30px">
-      <h5>Výsledky</h5>
-      <hr>
-    </div>
+  <div style="margin-top:30px">
+    <h5>Výsledky</h5>
+    <hr>
+  </div>
 
-    <table class="table table-striped table-hover-forum ">
-      <thead>
-        <tr style="height:45px">
-          <th style="text-align: center;">Název úlohy</th>
-          <th>Opravující</th>
-          <th style="text-align: center;">Body</th>
-          <th>Stav</th>
+  <table class="table table-striped table-hover-forum ">
+    <thead>
+      <tr style="height:45px">
+        <th style="text-align: center;">Název úlohy</th>
+        <th>Opravující</th>
+        <th style="text-align: center;">Body</th>
+        <th>Stav</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each model.details.modules as |module|}}
+        <tr>
+          <td style="text-align: center;">{{module.name}}</td>
+          <td>{{if module.score module.score.reviewed_by.full_name "–"}}</td>
+          <td style="text-align: center;">{{#if module.score}}{{module.score.score}}/{{module.max_score}}{{else}}–{{/if}}</td>
+          <td>{{if module.score "Opraveno" "Neopraveno"}}</td>
         </tr>
-      </thead>
-      <tbody>
-        {{#each model.my_score.score_table.table as |row|}}
-          <tr>
-            <td style="text-align: center;">{{row.module_name}}</td>
-            <td>{{if row.manual_correction model.my_score.reviewed_by.full_name "–"}}</td>
-            <td style="text-align: center;">{{#if row.is_corrected}}{{row.score}}/{{row.max_score}}{{else}}–{{/if}}</td>
-            <td>{{if row.is_corrected "Opraveno" "Neopraveno"}}</td>
-          </tr>
-        {{/each}}
-      </tbody>
-    </table>
-  {{/if}}
+      {{/each}}
+    </tbody>
+  </table>
 
-  {{#if model.my_score.thread}}
-    <div style="margin-top:50px">
-      <h5>Komentář ke tvému řešení:</h5>
-      <hr>
-    </div>
+  <div style="margin-top:50px">
+    <h5>Komentář ke tvému řešení:</h5>
+    <hr>
+  </div>
 
-    {{thread-view thread=model.my_score.thread store=store}}
-  {{/if}}
+  {{thread-view thread=model.details.comment store=store}}
 </div>
 {{else}}
   {{info-general text="Tuto úlohu jsi zatím neodevzdal."}} <!-- TODO -->
