--- a/app/templates/task/statistics.hbs
+++ b/app/templates/task/statistics.hbs
@@ -8,7 +8,7 @@
     </tr>
   </thead>  
   <tbody>
-    {{#each model.best_scores as |score|}}
+    {{#each model.details.best_scores as |score|}}
     <tr style="height:45px">
       <td class="numbering" style="text-align: center;"></td>
       <td>{{#link-to "user-profile" score.user}}{{score.user.full_name}}{{/link-to}}</td>
