Fix security warning

--- a/app/templates/task/evaluation.hbs
+++ b/app/templates/task/evaluation.hbs
@@ -6,7 +6,7 @@
   </div>
 
 	<div class="progress" style="margin-top:20px">
-		<div class="progress-bar progress-bar-warning progress-bar-ksi" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="10" style="width: {{progress_width}}%">
+		<div class="progress-bar progress-bar-warning progress-bar-ksi" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="10" style={{progress_width}}>
 			<b>{{sum}}&nbsp;/{{model.max_score}}</b>
 		</div>
 	</div>
