Fix posting a new post

--- a/app/templates/components/thread-view.hbs
+++ b/app/templates/components/thread-view.hbs
@@ -1,5 +1,5 @@
 <ul class="media-list" style="margin:20px">
 	{{#each thread.details.root_posts as |post|}}
-		{{thread-post model=post}}
+		{{thread-post model=post store=store}}
 	{{/each}}
 </ul>
