--- a/app/templates/loading.hbs
+++ b/app/templates/loading.hbs
@@ -1,3 +1,3 @@
 <section class="container content-section" style="text-align:justify; margin-top: 40px;height:500px;">
-	<h1>I am loading!</h1>
+	<div class="loader dots-loader"></div>
 </section>
