Add new remote_dev environment

--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -17,7 +17,7 @@
 					<div class="panel-body">
 						<h6><span class="glyphicon glyphicon-education" aria-hidden="true"></span> {{model.school_name}}</h6>
 						<br>
-						<h6><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> {{model.addr_country}}</h6>
+						<h6><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> {{country}}</h6>
 					</div>
 				</div>
 			{{/unless}}
