--- a/app/templates/components/file-module.hbs
+++ b/app/templates/components/file-module.hbs
@@ -22,6 +22,8 @@
 		</ul>
 	{{/if}}
 	{{#if general_error}}
-		{{warning-general text=general_error}}
+		<div style="margin-top:20px">
+			{{warning-general text=general_error}}
+		</div>
 	{{/if}}
 </div>
