Fix profile_pics, upload picture button, login form errors

--- a/app/templates/components/orgs-list.hbs
+++ b/app/templates/components/orgs-list.hbs
@@ -1,7 +1,7 @@
 {{#each model as |org index|}}
     <div class="col-xs-6 col-md-3" style="margin:20px text-align:center;">
       {{#link-to "user-profile" org}}
-          <img src="{{org.profile_picture}}" style="
+          <img src="{{org.profile_picture_r}}" style="
             width: 100%;
             margin: 0 auto;
             overflow:hidden;
