--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -1,8 +1,9 @@
+{{log model}}
 <section id="profile" class="container content-section" style="text-align:justify">
 	<div class="row">
 		<div class="col-sm-12 col-md-3">
 			<div style="margin-top:30px">
-				<img src="{{model.profile_picture}}" style="width:100%; max-width:250px;"/>
+				<img src="{{model.profile_picture_r}}" style="width:100%; max-width:250px;"/>
 			</div>
 			<div id="name" style="margin-top:30px; margin-left:5px">
 				<h3 style="text-align: left">{{model.full_name}}</h3>
